# test_frameworks

./: (bad)api_java_activej.yml  (bad)api_node_bun.yml  (bad)api_node_hyperexpress.yml  (bad)swarm_api_clojure_donkey.yml  (bad)swarm_api_crystal_routescr.yml  (bad)swarm_api_go_fastrouter.yml  (bad)swarm_api_go_fiber.yml  (bad)swarm_api_haskell_warp.yml  (bad)swarm_api_node_bun.yml  (bad)swarm_api_node_hyperexpress.yml  (bad)swarm_api_node_lowhttpserver.yml  (bad)swarm_api_php_fomo.yml  (bad)swarm_api_php_simps.yml  (bad)swarm_api_rust_actix.yml  (bad)swarm_api_rust_rocket.yml  (bad)swarm_api_scala_akka.yml  (bad)swarm_nginx_experiments.yml  .dockerignore  .gitignore  BAD_api_apidaora.yml  BAD_api_asgineer.yml  README.md  README_second_pc.md  README_v3.md  api_aiohttp.yml  api_fastapi.yml  api_go_fastrouter.yml  api_go_fiber.yml  api_netcore_fastendpoints.yml  api_node_polkadot.yml  api_php_simps.yml  api_php_workerman.yml  api_rust_actix.yml  api_rust_rocket.yml  api_rust_warp.yml  api_sanic.yml  clickhouse.yml  haproxy_experiments.yml  nginx_experiments.yml  postgres.yml  (+7 more)
.lsp/.cache/: db.transit.json
apps/otherlangs/rust/actix-app/: Cargo.toml  readme.md
apps/otherlangs/rust/actix-app/src/: main.rs
apps/py/: req.txt  test.py
dockers/clojure/: Dockerfile_swarm_donkey
dockers/crystal/: Dockerfile_swarm_crystal
dockers/go/: Dockerfile
dockers/haproxy/: haproxy.cfg
dockers/haskell/: Dockerfile_swarm_warp
dockers/java/: Dockerfile_swarm_activej
dockers/netcore/: Dockerfile_swarm_fastendpoints
dockers/nginx/: arc.conf  nginx copy.conf  nginx.conf
(+155 files in other folders)
